manifests/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # --- THIS IS THE CHANGE ---
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    # --- END OF CHANGE ---
    
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.trivoconnect.com
    secretName: argocd-tls-secret
  rules:
  - host: argocd.trivoconnect.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
